removed flowkit ui url

--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_USER=hamster
 # The database password. This is currently used for both the user and the admin
 DB_PW=TEST_PASSWORD
 # FlowKit UI - this is required for CORS to allow the UI to access the API
-FLOWKIT_UI_URL=http://localhost:3000
+FLOWKIT_UI_URL=
 # The port on which a local jupyter lab can run
 JUPYTER_PORT=8888
 # Auth0 integration
