--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ __pycache__/
 **/.ipynb_checkpoints
 **/.cache
 **/.npm
-**/.jupyter
+**/.jupyter/migrated
+**/.jupyter/lab/*
+!**/.jupyter/lab/user-settings
 **/.local
 **/.ipython
 **/.yarn
