--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 **/src-generated
 *gen*.log
 **/doc/examples/*.html
-**/data
+**/data/**
+!**/data/synthetic
+!**/data/synthetic/**
 
 # Python
 *.pyc
