--- a/.env
+++ b/.env
@@ -60,3 +60,10 @@ SERVER_PORT_HOST=
 DB_PORT_HOST=
 # Optional path to mount a local data directory into the web service container
 DATA_DIR_LOCAL=
+# Auth0 credentials for ingestion script
+INGESTION_BASE_URL=
+INGESTION_AUTH0_DOMAIN=
+INGESTION_AUTH0_CLIENT_ID_UPDATER=
+INGESTION_AUTH0_CLIENT_SECRET_UPDATER=
+INGESTION_AUTH0_CLIENT_ID_ADMIN=
+INGESTION_AUTH0_CLIENT_SECRET_ADMIN=
