--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,15 @@ services:
       - CONTAINER_NAME_DB=$CONTAINER_NAME_DB
       - DB_PORT_CONTAINER=$DB_PORT_CONTAINER
       - DB_NAME=$DB_NAME
+      - AUTH0_AUDIENCE=$AUTH0_AUDIENCE
+      - SERVER_PORT_CONTAINER=$SERVER_PORT_CONTAINER
+      - API_VERSION_URL_APPENDIX=$API_VERSION_URL_APPENDIX
+      - INGESTION_BASE_URL=$INGESTION_BASE_URL
+      - INGESTION_AUTH0_DOMAIN=$INGESTION_AUTH0_DOMAIN
+      - INGESTION_AUTH0_CLIENT_ID_UPDATER=$INGESTION_AUTH0_CLIENT_ID_UPDATER
+      - INGESTION_AUTH0_CLIENT_SECRET_UPDATER=$INGESTION_AUTH0_CLIENT_SECRET_UPDATER
+      - INGESTION_AUTH0_CLIENT_ID_ADMIN=$INGESTION_AUTH0_CLIENT_ID_ADMIN
+      - INGESTION_AUTH0_CLIENT_SECRET_ADMIN=$INGESTION_AUTH0_CLIENT_SECRET_ADMIN
     volumes:
       - $PWD/src/jupyter:/home/${CONTAINER_USER}:rw
       - $PWD/src/impl:/home/${APP_DIR}/src/impl:ro
