--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
 
   build:
     machine:
-      image: ubuntu-2004:202111-02
+      image: ubuntu-2004:2023.04.2
       docker_layer_caching: true
     resource_class: large
     working_directory: /tmp/flowkit-ui-backend
