make more things work

--- a/.env
+++ b/.env
@@ -57,7 +57,7 @@ JUPYTER_ENABLED=0
 # The external port on which the web service can be reached on the host
 SERVER_PORT_HOST=
 # The external port on which the database can be reached on the host
-DB_PORT_HOST=
+DB_PORT_HOST=3306
 # Optional path to mount a local data directory into the web service container
 DATA_DIR_LOCAL=
 # Auth0 credentials for ingestion script
@@ -67,3 +67,8 @@ INGESTION_AUTH0_CLIENT_ID_UPDATER=
 INGESTION_AUTH0_CLIENT_SECRET_UPDATER=
 INGESTION_AUTH0_CLIENT_ID_ADMIN=
 INGESTION_AUTH0_CLIENT_SECRET_ADMIN=
+
+# Dev settings
+
+CONTAINER_NAME_DB=flowkit-ui-db
+IMAGE_NAME_DB_ACTUAL=mysql:8.0
