--- a/requirements.txt
+++ b/requirements.txt
@@ -4,80 +4,81 @@
 #
 #    pip-compile --output-file=/tmp/requirements/requirements.txt /tmp/requirements/requirements.in
 #
-aiocsv==1.2.3
+aiocsv==1.2.5
     # via -r /tmp/requirements/requirements.in
-aiofiles==22.1.0
+aiofiles==23.2.1
     # via -r /tmp/requirements/requirements.in
-aiohttp==3.8.3
-    # via -r /tmp/requirements/requirements.in
-aiomysql==0.1.1
+aiohttp==3.9.1
+    # via
+    #   -r /tmp/requirements/requirements.in
+    #   auth0-python
+aiomysql==0.2.0
     # via -r /tmp/requirements/requirements.in
 aiosignal==1.3.1
     # via aiohttp
-alog==0.9.13
-    # via timing-asgi
 aniso8601==9.0.1
     # via
     #   -r /tmp/requirements/requirements.in
     #   graphene
-anyio==3.6.2
+annotated-types==0.6.0
+    # via pydantic
+anyio==3.7.1
     # via
-    #   httpcore
+    #   fastapi
+    #   httpx
     #   starlette
     #   watchgod
-asgi-correlation-id==3.2.1
+asgi-correlation-id==4.2.0
     # via -r /tmp/requirements/requirements.in
 async-exit-stack==1.0.1
     # via -r /tmp/requirements/requirements.in
 async-generator==1.10
     # via -r /tmp/requirements/requirements.in
-async-timeout==4.0.2
-    # via aiohttp
 asyncache==0.3.1
     # via -r /tmp/requirements/requirements.in
-attrs==22.1.0
+attrs==23.1.0
     # via aiohttp
-auth0-python==3.24.0
+auth0-python==4.7.0
     # via -r /tmp/requirements/requirements.in
 better-exceptions==0.3.3
     # via -r /tmp/requirements/requirements.in
-cachetools==5.2.0
+cachetools==5.3.2
     # via asyncache
-certifi==2022.9.24
+certifi==2023.11.17
     # via
     #   -r /tmp/requirements/requirements.in
     #   httpcore
     #   httpx
     #   requests
-cffi==1.15.1
+cffi==1.16.0
     # via cryptography
-chardet==5.0.0
+chardet==5.2.0
     # via -r /tmp/requirements/requirements.in
-charset-normalizer==2.1.1
-    # via
-    #   aiohttp
-    #   requests
-click==8.1.3
+charset-normalizer==3.3.2
+    # via requests
+click==8.1.7
     # via uvicorn
 colorama==0.4.6
     # via -r /tmp/requirements/requirements.in
-cryptography==38.0.3
-    # via pyjwt
-dnspython==2.2.1
+cryptography==41.0.7
+    # via
+    #   auth0-python
+    #   pyopenssl
+dnspython==2.4.2
     # via
     #   -r /tmp/requirements/requirements.in
     #   email-validator
 ecdsa==0.18.0
     # via python-jose
-email-validator==1.3.0
+email-validator==2.1.0.post1
     # via -r /tmp/requirements/requirements.in
-fastapi==0.87.0
+fastapi==0.105.0
     # via -r /tmp/requirements/requirements.in
-frozenlist==1.3.3
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-graphene==3.1.1
+graphene==3.3
     # via -r /tmp/requirements/requirements.in
 graphql-core==3.2.3
     # via
@@ -88,79 +89,80 @@ graphql-relay==3.2.0
     # via
     #   -r /tmp/requirements/requirements.in
     #   graphene
-h11==0.12.0
+h11==0.14.0
     # via
     #   -r /tmp/requirements/requirements.in
     #   httpcore
     #   uvicorn
-httpcore==0.15.0
+httpcore==1.0.2
     # via httpx
-httptools==0.5.0
+httptools==0.6.1
     # via -r /tmp/requirements/requirements.in
-httpx==0.23.0
+httpx==0.26.0
     # via -r /tmp/requirements/requirements.in
-idna==3.4
+idna==3.6
     # via
     #   -r /tmp/requirements/requirements.in
     #   anyio
     #   email-validator
+    #   httpx
     #   requests
-    #   rfc3986
     #   yarl
 itsdangerous==2.1.2
     # via -r /tmp/requirements/requirements.in
 jinja2==3.1.2
     # via -r /tmp/requirements/requirements.in
-markupsafe==2.1.1
+markupsafe==2.1.3
     # via
     #   -r /tmp/requirements/requirements.in
     #   jinja2
-multidict==6.0.2
+multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
-mysql-connector-python==8.0.31
+mysql-connector-python==8.2.0
     # via -r /tmp/requirements/requirements.in
-orjson==3.8.1
+orjson==3.9.10
     # via -r /tmp/requirements/requirements.in
-pendulum==2.1.2
+pendulum==3.0.0
     # via -r /tmp/requirements/requirements.in
 promise==2.3
     # via -r /tmp/requirements/requirements.in
-protobuf==3.20.1
+protobuf==4.21.12
     # via mysql-connector-python
-pyasn1==0.4.8
+pyasn1==0.5.1
     # via
     #   python-jose
     #   rsa
 pycparser==2.21
     # via cffi
-pydantic==1.10.2
+pydantic==2.5.2
     # via
     #   -r /tmp/requirements/requirements.in
     #   fastapi
-pyjwt[crypto]==2.6.0
+pydantic-core==2.14.5
+    # via pydantic
+pyjwt==2.8.0
     # via auth0-python
-pymysql==1.0.2
+pymysql==1.1.0
     # via aiomysql
+pyopenssl==23.3.0
+    # via auth0-python
 python-dateutil==2.8.2
     # via
     #   -r /tmp/requirements/requirements.in
     #   pendulum
-python-dotenv==0.21.0
+    #   time-machine
+python-dotenv==1.0.0
     # via -r /tmp/requirements/requirements.in
 python-jose==3.3.0
     # via -r /tmp/requirements/requirements.in
-python-multipart==0.0.5
+python-multipart==0.0.6
     # via -r /tmp/requirements/requirements.in
-pytzdata==2020.1
-    # via pendulum
-pyyaml==6.0
+pyyaml==6.0.1
     # via -r /tmp/requirements/requirements.in
-requests==2.28.1
+requests==2.31.0
     # via auth0-python
-rfc3986[idna2008]==1.5.0
-    # via httpx
 rsa==4.9
     # via python-jose
 rx==3.2.0
@@ -171,38 +173,43 @@ six==1.16.0
     #   ecdsa
     #   promise
     #   python-dateutil
-    #   python-multipart
 sniffio==1.3.0
     # via
     #   anyio
-    #   httpcore
     #   httpx
-starlette==0.21.0
+starlette==0.27.0
     # via
     #   -r /tmp/requirements/requirements.in
     #   asgi-correlation-id
     #   fastapi
-structlog==22.1.0
+structlog==23.2.0
     # via -r /tmp/requirements/requirements.in
-timing-asgi==0.2.1
+time-machine==2.13.0
+    # via pendulum
+timing-asgi==0.3.1
     # via -r /tmp/requirements/requirements.in
-typing-extensions==4.4.0
+typing-extensions==4.9.0
     # via
     #   -r /tmp/requirements/requirements.in
+    #   fastapi
     #   pydantic
-ujson==5.5.0
+    #   pydantic-core
+tzdata==2023.3
+    # via pendulum
+ujson==5.9.0
     # via -r /tmp/requirements/requirements.in
-urllib3==1.26.12
+urllib3==2.1.0
     # via
     #   -r /tmp/requirements/requirements.in
+    #   auth0-python
     #   requests
-uvicorn==0.19.0
+uvicorn==0.24.0.post1
     # via -r /tmp/requirements/requirements.in
-uvloop==0.17.0
+uvloop==0.19.0
     # via -r /tmp/requirements/requirements.in
 watchgod==0.8.2
     # via -r /tmp/requirements/requirements.in
-websockets==10.4
+websockets==12.0
     # via -r /tmp/requirements/requirements.in
-yarl==1.8.1
+yarl==1.9.4
     # via aiohttp
