--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,6 @@ aniso8601==9.0.1
     # via
     #   -r /tmp/requirements/requirements.in
     #   graphene
-annotated-types==0.6.0
-    # via pydantic
 anyio==3.7.1
     # via
     #   fastapi
@@ -136,12 +134,11 @@ pyasn1==0.5.1
     #   rsa
 pycparser==2.21
     # via cffi
-pydantic==2.5.2
+pydantic==1.10.13
     # via
+    #   -c /tmp/requirements/constraints.in
     #   -r /tmp/requirements/requirements.in
     #   fastapi
-pydantic-core==2.14.5
-    # via pydantic
 pyjwt==2.8.0
     # via auth0-python
 pymysql==1.1.0
@@ -193,7 +190,6 @@ typing-extensions==4.9.0
     #   -r /tmp/requirements/requirements.in
     #   fastapi
     #   pydantic
-    #   pydantic-core
 tzdata==2023.3
     # via pendulum
 ujson==5.9.0
