Clean up docker build a little

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,13 @@
-.vscode*
-.circleci*
-.git*
-codegen*
-.dockerignore
-.gitignore
-.pre-commit-config.yaml
-README.md
-Makefile
+# This .dockerignore file follows the "whitelisting" approach described here:
+#    https://youknowfordevs.com/2018/12/07/getting-control-of-your-dockerignore-files.html
+
+#
+# First, exclude everything by default:
+#
+*
+
+#
+# Now un-exclude only those folders and files that are needed for building the image:
+#
+!flowkit_ui_backend
+!requirements.txt
