--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,7 @@ jobs:
       - run:
           name: Run unit tests (use container-internal data dir)
           command: |
+            pyenv local 3.11.2
             python -m venv ./venv
             source venv/bin/activate
             pip install -r dev-requirements.txt
