--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,7 @@ aiocsv==1.2.5
 aiofiles==23.2.1
     # via -r /tmp/requirements/requirements.in
 aiohttp==3.9.1
-    # via
-    #   -r /tmp/requirements/requirements.in
-    #   auth0-python
+    # via -r /tmp/requirements/requirements.in
 aiomysql==0.2.0
     # via -r /tmp/requirements/requirements.in
 aiosignal==1.3.1
@@ -36,8 +34,10 @@ asyncache==0.3.1
     # via -r /tmp/requirements/requirements.in
 attrs==23.1.0
     # via aiohttp
-auth0-python==4.7.0
-    # via -r /tmp/requirements/requirements.in
+auth0-python==3.24.0
+    # via
+    #   -c /tmp/requirements/constraints.in
+    #   -r /tmp/requirements/requirements.in
 better-exceptions==0.3.3
     # via -r /tmp/requirements/requirements.in
 cachetools==5.3.2
@@ -59,9 +59,7 @@ click==8.1.7
 colorama==0.4.6
     # via -r /tmp/requirements/requirements.in
 cryptography==41.0.7
-    # via
-    #   auth0-python
-    #   pyopenssl
+    # via pyjwt
 dnspython==2.4.2
     # via
     #   -r /tmp/requirements/requirements.in
@@ -139,12 +137,10 @@ pydantic==1.10.13
     #   -c /tmp/requirements/constraints.in
     #   -r /tmp/requirements/requirements.in
     #   fastapi
-pyjwt==2.8.0
+pyjwt[crypto]==2.8.0
     # via auth0-python
 pymysql==1.1.0
     # via aiomysql
-pyopenssl==23.3.0
-    # via auth0-python
 python-dateutil==2.8.2
     # via
     #   -r /tmp/requirements/requirements.in
@@ -195,7 +191,6 @@ ujson==5.9.0
 urllib3==2.1.0
     # via
     #   -r /tmp/requirements/requirements.in
-    #   auth0-python
     #   requests
 uvicorn==0.24.0.post1
     # via -r /tmp/requirements/requirements.in
