And in the Compose file too

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - DATA_DIR_LOCAL=$DATA_DIR_LOCAL
       - CONTAINER_NAME=$CONTAINER_NAME
       - CONTAINER_NAME_DB=$CONTAINER_NAME_DB
+      - SECURE_FILE_BUCKET=$SECURE_FILE_BUCKET
+      - DQS_BUCKET_PATH=$DQS_BUCKET_PATH
     networks:
       docker_nw:
 
