--- a/alembic.ini
+++ b/alembic.ini
@@ -1,12 +1,15 @@
 # A generic, single database configuration.
 
-[alembic]
+# [alembic]
 
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
-
+# The above lies. This will be parsed before env.
+# OK, it's _technically_ true, but it still gets checked for legitimacy during context.config
+# 
+# sqlalchemy.url = mysql+mysqlconnector://user:pass@localhost/dbname
+# sqlalchemy.url = None 
 
 # Logging configuration
 [loggers]
