--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiofiles==24.1.0
     # via -r requirements.in
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.18
+aiohttp==3.12.13
     # via
     #   -r requirements.in
     #   auth0-python
@@ -14,6 +14,8 @@ aiomysql==0.2.0
     # via -r requirements.in
 aiosignal==1.3.2
     # via aiohttp
+alembic==1.16.2
+    # via -r requirements.in
 aniso8601==10.0.1
     # via -r requirements.in
 anyio==3.7.1
@@ -31,7 +33,7 @@ asyncache==0.3.1
     # via -r requirements.in
 attrs==25.3.0
     # via aiohttp
-auth0-python==4.9.0
+auth0-python==4.10.0
     # via -r requirements.in
 better-exceptions==0.3.3
     # via -r requirements.in
@@ -40,7 +42,7 @@ cachetools==5.5.2
     #   -r requirements.in
     #   asyncache
     #   google-auth
-certifi==2025.4.26
+certifi==2025.6.15
     # via
     #   -r requirements.in
     #   httpcore
@@ -50,13 +52,13 @@ cffi==1.17.1
     # via cryptography
 chardet==5.2.0
     # via -r requirements.in
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
     # via requests
-click==8.1.8
+click==8.2.1
     # via uvicorn
 colorama==0.4.6
     # via -r requirements.in
-cryptography==44.0.2
+cryptography==45.0.4
     # via auth0-python
 dnspython==2.7.0
     # via
@@ -66,17 +68,17 @@ ecdsa==0.19.1
     # via python-jose
 email-validator==2.2.0
     # via -r requirements.in
-fastapi==0.115.12
+fastapi==0.115.14
     # via -r requirements.in
-frozenlist==1.6.0
+frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-google-api-core==2.24.2
+google-api-core==2.25.1
     # via
     #   google-cloud-core
     #   google-cloud-storage
-google-auth==2.39.0
+google-auth==2.40.3
     # via
     #   -r requirements.in
     #   google-api-core
@@ -84,7 +86,7 @@ google-auth==2.39.0
     #   google-cloud-storage
 google-cloud-core==2.4.3
     # via google-cloud-storage
-google-cloud-storage==3.1.0
+google-cloud-storage==3.1.1
     # via -r requirements.in
 google-crc32c==1.7.1
     # via
@@ -105,6 +107,8 @@ graphql-relay==3.2.0
     # via
     #   -r requirements.in
     #   graphene
+greenlet==3.2.3
+    # via sqlalchemy
 h11==0.16.0
     # via
     #   -r requirements.in
@@ -128,11 +132,14 @@ itsdangerous==2.2.0
     # via -r requirements.in
 jinja2==3.1.6
     # via -r requirements.in
+mako==1.3.10
+    # via alembic
 markupsafe==3.0.2
     # via
     #   -r requirements.in
     #   jinja2
-multidict==6.4.3
+    #   mako
+multidict==6.6.3
     # via
     #   aiohttp
     #   yarl
@@ -146,23 +153,23 @@ pendulum==3.1.0
     # via -r requirements.in
 promise==2.3
     # via -r requirements.in
-propcache==0.3.1
+propcache==0.3.2
     # via
     #   aiohttp
     #   yarl
 proto-plus==1.26.1
     # via google-api-core
-protobuf==6.30.2
+protobuf==6.31.1
     # via
     #   google-api-core
     #   googleapis-common-protos
     #   proto-plus
-pyasn1==0.4.8
+pyasn1==0.6.1
     # via
     #   pyasn1-modules
     #   python-jose
     #   rsa
-pyasn1-modules==0.4.1
+pyasn1-modules==0.4.2
     # via google-auth
 pycparser==2.22
     # via cffi
@@ -180,13 +187,13 @@ python-dateutil==2.9.0.post0
     #   -r requirements.in
     #   graphene
     #   pendulum
-python-jose==3.4.0
+python-jose==3.5.0
     # via -r requirements.in
 python-multipart==0.0.20
     # via -r requirements.in
 pyyaml==6.0.2
     # via -r requirements.in
-requests==2.32.3
+requests==2.32.4
     # via
     #   auth0-python
     #   google-api-core
@@ -205,32 +212,36 @@ six==1.17.0
     #   python-dateutil
 sniffio==1.3.1
     # via anyio
+sqlalchemy==2.0.41
+    # via alembic
 starlette==0.46.2
     # via
     #   -r requirements.in
     #   asgi-correlation-id
     #   fastapi
-structlog==25.3.0
+structlog==25.4.0
     # via -r requirements.in
 timing-asgi==0.3.1
     # via -r requirements.in
-typing-extensions==4.13.2
+typing-extensions==4.14.0
     # via
     #   -r requirements.in
     #   aiocsv
+    #   alembic
     #   fastapi
     #   graphene
     #   pydantic
+    #   sqlalchemy
 tzdata==2025.2
     # via pendulum
 ujson==5.10.0
     # via -r requirements.in
-urllib3==2.4.0
+urllib3==2.5.0
     # via
     #   -r requirements.in
     #   auth0-python
     #   requests
-uvicorn==0.34.2
+uvicorn==0.35.0
     # via -r requirements.in
 uvloop==0.21.0
     # via -r requirements.in
@@ -238,5 +249,5 @@ watchgod==0.8.2
     # via -r requirements.in
 websockets==15.0.1
     # via -r requirements.in
-yarl==1.20.0
+yarl==1.20.1
     # via aiohttp
