--- a/alembic.ini
+++ b/alembic.ini
@@ -2,14 +2,7 @@
 
 # [alembic]
 
-# database URL.  This is consumed by the user-maintained env.py script only.
-# other means of configuring database URLs may be customized within the env.py
-# file.
-# The above lies. This will be parsed before env.
-# OK, it's _technically_ true, but it still gets checked for legitimacy during context.config
-# 
-# sqlalchemy.url = mysql+mysqlconnector://user:pass@localhost/dbname
-# sqlalchemy.url = None 
+# Connection string set in env.py
 
 # Logging configuration
 [loggers]
