Build and push at once to avoid corruption

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
     machine:
       image: ubuntu-2004:2023.04.2
       docker_layer_caching: true
-    resource_class: large  # Keep using CircleCI's hosted runners for building
+    resource_class: large
     working_directory: /tmp/flowkit-ui-backend
     steps:
       - checkout
@@ -63,12 +63,6 @@ jobs:
           command: |
             make -e build
       - run:
-          name: Tag image for a private registry
-          command: |
-            # Tag the built image for the private registry
-            docker tag flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}} ${REGISTRY_URL}/flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}}
-            docker tag flowminder/flowkit-ui-backend:latest ${REGISTRY_URL}/flowminder/flowkit-ui-backend:latest
-      - run:
           name: Run unit tests
           command: |
             pyenv local 3.11.2
@@ -80,34 +74,18 @@ jobs:
       - store_test_results:
           path: test_results/results.xml
       - run:
-          name: Save Docker image to file
+          name: Tag and push image to private registry
           command: |
-            docker save -o /tmp/flowkit-ui-backend.tar ${REGISTRY_URL}/flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}} ${REGISTRY_URL}/flowminder/flowkit-ui-backend:latest
-      - persist_to_workspace:
-          root: /tmp
-          paths:
-            - flowkit-ui-backend.tar
+            # Tag for private registry
+            docker tag flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}} registry.cloud.flowminder.org/flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}}
+            docker tag flowminder/flowkit-ui-backend:latest registry.cloud.flowminder.org/flowminder/flowkit-ui-backend:latest
+            
+            # Login and push
+            echo "$DOCKER_CLOUD_PASSWORD" | docker login registry.cloud.flowminder.org -u "$DOCKER_CLOUD_USER" --password-stdin
+            docker push registry.cloud.flowminder.org/flowminder/flowkit-ui-backend:${CIRCLE_TAG:-${CIRCLE_SHA1:0:7}}
+            docker push registry.cloud.flowminder.org/flowminder/flowkit-ui-backend:latest
       - upload_codecov:
           test: test_results
-
-  push:
-    machine:
-      image: default
-    resource_class: flowminder/runners  # Use private runners for pushing
-    steps:
-      - attach_workspace:
-          at: /tmp
-      - run:
-          name: Install Docker CLI
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y docker.io
-      - run:
-          name: Load and push Docker image
-          command: |
-            sudo docker load -i /tmp/flowkit-ui-backend.tar
-            echo "$DOCKER_CLOUD_PASSWORD" | sudo docker login ${REGISTRY_URL} -u "$DOCKER_CLOUD_USER" --password-stdin
-            sudo docker push -a ${REGISTRY_URL}/flowminder/flowkit-ui-backend
 
   update-mob-dashtag:
     docker:
@@ -151,16 +129,11 @@ workflows:
       - build:
           context:
             - flowcloud-docker-registry
-      - push:
-          context:
-            - flowcloud-docker-registry
-          requires:
-            - build
       - update-mob-dashtag:
           context:
             - flowminder-gcp-mobility-dashboard-gcr-context
           requires:
-            - push
+            - build
           filters:
             branches:
               only:
